<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText

        android:id="@+id/etNotificationTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_title"
        android:inputType="textPersonName"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etNotificationMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notification_message"
        android:inputType="textMultiLine"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btnCreateNotification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_notification" />

</LinearLayout>
