<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/prompt"/>

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_foreground"/>

            <Button
                android:id="@+id/button_choose_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                android:layout_marginTop="16dp"/>

            <Button
                android:id="@+id/button_confirm_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload"
                android:layout_marginTop="8dp"/>

            <Button
                android:id="@+id/button_cancel_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
    android:id="@+id/button_delete_image"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/delete_image"
    android:layout_margin="8dp"
    android:layout_alignParentBottom="true"/>
</RelativeLayout>